# meridian

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  main.py  worker.py
backend/agents/: comparative.py  graph.py  multi_hop.py  prompts.py  router.py  simple_rag.py  state.py
backend/api/routes/: chat.py  ingest.py  reports.py  search.py
backend/ingestion/: chunker.py  edgar.py  enricher.py  indexer.py  processor.py
backend/knowledge_graph/: client.py
backend/models/: documents.py  financial.py  queries.py
backend/retrieval/: hybrid.py  hyde.py  reranker.py  temporal.py
backend/tools/: calculator.py  charts.py  news.py
evals/: eval_runner.py
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/components/Chat/: ChatWindow.tsx  Citations.tsx  Message.tsx  QueryTypeBadge.tsx
frontend/src/components/Research/: IngestPanel.tsx
frontend/src/hooks/: useChat.ts
frontend/src/lib/: api.ts  types.ts
scripts/: seed_data.py
